--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=simple-bank-account
+
+spring.r2dbc.url=r2dbc:${DB_URL}
+spring.r2dbc.username=${DB_USER}
+spring.r2dbc.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=none
+
+spring.flyway.enabled=true
+spring.flyway.url=jdbc:${DB_URL}
+spring.flyway.user=${DB_USER}
+spring.flyway.password=${DB_PASSWORD}
+spring.flyway.locations: classpath:db/migration
+spring.flyway.baseline-on-migrate: true
