--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=simple-bank-account
 
+spring.main.web-application-type=reactive
+
+server.servlet.context-path=/v1
+
 spring.r2dbc.url=r2dbc:${DB_URL}
 spring.r2dbc.username=${DB_USER}
 spring.r2dbc.password=${DB_PASSWORD}
