Changing Entities from record to classes. Adding lombok. Added the provided_id field in the account holder.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 spring.application.name=simple-bank-account
 
-spring.main.web-application-type=reactive
-
 server.servlet.context-path=/v1
 
-spring.r2dbc.url=r2dbc:${DB_URL}
-spring.r2dbc.username=${DB_USER}
-spring.r2dbc.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 
