--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-r2dbc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -48,12 +44,6 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 			<version>42.7.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>r2dbc-postgresql</artifactId>
-			<scope>runtime</scope>
-			<version>1.0.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
@@ -92,6 +82,12 @@
 			<version>10.16.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.34</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -114,11 +110,6 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>postgresql</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.testcontainers</groupId>
-			<artifactId>r2dbc</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -149,7 +140,6 @@
 					<modelPackage>com.wearewaes.model</modelPackage>
 					<configOptions>
 						<java21>true</java21>
-						<reactive>true</reactive>
 						<skipDefaultInterface>true</skipDefaultInterface>
 						<dateLibrary>java17-localdatetime</dateLibrary>
 						<useBeanValidation>true</useBeanValidation>
