--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.flyway.user=${DB_USER}
 spring.flyway.password=${DB_PASSWORD}
 spring.flyway.locations: classpath:db/migration
 spring.flyway.baseline-on-migrate: true
+
+security.encryption.key=${ENCRYPTION_KEY}
+
+springdoc.show-actuator=true
+management.endpoints.web.exposure.include=metrics, health, info
