--- a/pom.xml
+++ b/pom.xml
@@ -13,19 +13,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>simple-bank-account</name>
 	<description>Code assigment for Rabobank RDC Team</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
 	<properties>
 		<java.version>21</java.version>
 		<openapi-generator.version>7.7.0</openapi-generator.version>
@@ -216,6 +203,7 @@
 						<artifactId>maven-failsafe-plugin</artifactId>
 						<version>3.3.1</version>
 						<configuration>
+							<testSourceDirectory>src/end-to-end</testSourceDirectory>
 							<includes>
 								<include>**/*IT.java</include>
 							</includes>
