--- a/pom.xml
+++ b/pom.xml
@@ -174,12 +174,34 @@
 					<includes>
 						<include>**/*Test.java</include>
 					</includes>
+					<excludes>
+						<exclude>**/*IT.java</exclude>
+					</excludes>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>3.3.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>3.6.0</version>
+				<executions>
+					<execution>
+						<id>add-source</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-test-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>src/end-to-end/java</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -203,10 +225,13 @@
 						<artifactId>maven-failsafe-plugin</artifactId>
 						<version>3.3.1</version>
 						<configuration>
-							<testSourceDirectory>src/end-to-end</testSourceDirectory>
 							<includes>
 								<include>**/*IT.java</include>
 							</includes>
+
+							<excludes>
+								<exclude>**/*Test.java</exclude>
+							</excludes>
 						</configuration>
 						<executions>
 							<execution>
